route-table-association.tf
resource "aws_route_table_association" "tf-rt-association" {
  subnet_id      = aws_subnet.tf-subnet.id
  route_table_id = aws_route_table.tf-route-table.id
}
